--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Team836",
   "dependencies": {
+    "@bijection/smoke": "^1.0.2",
     "gatsby": "^2.19.3",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-feed": "^2.3.26",
