ci: deploy using gh-pages

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "node-sass": "npm:sass@^1.25.0",
     "prettier": "^1.19.1"
   },
@@ -46,6 +47,6 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "deploy": "gatsby build && gh-pages -d public"
   }
 }
