--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "devDependencies": {
     "gh-pages": "^2.2.0",
     "node-sass": "npm:sass@^1.25.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "push-dir": "^0.4.1"
   },
   "license": "MIT",
   "main": "n/a",
@@ -47,6 +48,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "push-dir": "push-dir --dir=public --branch=master",
     "deploy": "gatsby build && gh-pages -d public"
   }
 }
